<resources>
    <string name="app_name">Movie</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="shows">TV Show</string>
    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="vote_average">Vote Average</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="delete">Delete</string>
    <string name="add_movie_to_favorite">Adding movie…</string>
    <string name="add_show_to_favorite">Adding show…</string>
    <string name="now_playing">Now Playing</string>
</resources>